[tool.poetry]
name = "Travis"
version = "0.1.0"
description = ""
authors = ["MrPowers <manoj.uce10@gmail.com>"]
[tool.poetry.dependencies]
python = "^3.7"
pyspark = "^2.4.6"
[tool.poetry.dev-dependencies]
pytest = "^4.6"
pytest-cov = "^2.5"
chispa = "^0.3.0"
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"